# ollama-translator

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  pyproject.toml  sonar-project.properties  translator.py
.github/workflows/: ci.yml
ollama_translator/cli/: main.py
ollama_translator/core/: languages.py  translation.py
ollama_translator/web/: server.py
tests/: test_cli.py  test_core.py  test_translator.py  test_web.py
